--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "packageManager": "yarn@1.22.19",
   "devDependencies": {
     "clsx": "^2.1.1",
-    "prettier": "^3.3.2",
-    "tailwind-merge": "^2.5.2",
-    "turbo": "^2.0.4"
+    "prettier": "^3.3.3",
+    "tailwind-merge": "^2.5.4",
+    "turbo": "^2.2.3"
   },
   "resolutions": {
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "expo": "~51.0.14",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-web": "~0.19.13",
+    "tailwindcss": "^3.4.14"
   }
 }
