--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@expo/next-adapter": "^6.0.0",
-    "app": "*",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-native-web": "^0.19.12",
-    "ui": "*"
+    "app": "^0.1.0",
+    "next": "15.0.2",
+    "react": "18.2.0",
+    "react-dom": "^18.3.1",
+    "react-native-web": "~0.19.13",
+    "ui": "^0.2.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "prettier": "^3.3.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
