nativewind types fix

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "expo": "~51.0.14",
+    "nativewind": "^4.0.36",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-web": "~0.19.13",
