--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,7 +1,11 @@
 {
-    "name": "app",
-    "private": true,
-    "version": "1.0.0",
-    "main": "index.ts",
-    "license": "MIT"
+  "name": "app",
+  "private": true,
+  "version": "1.0.0",
+  "main": "index.ts",
+  "license": "MIT",
+  "devDependencies": {
+    "nativewind": "^4.0.36",
+    "ui": "workspace:*"
+  }
 }
